[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/mobs/slime-blue.png" type="Texture" id=1]
[ext_resource path="res://source/core/Slime.gd" type="Script" id=2]
[ext_resource path="res://hud/themes/custom_theme.tres" type="Theme" id=3]

[ext_resource path="res://sprites/mobs/slime-blue.png" type="Texture" id=1]
[ext_resource path="res://source/core/Slime.gd" type="Script" id=2]
[ext_resource path="res://source/core/Slime.tres" type="Material" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="Animation" id=3]
resource_name = "Bounce"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hit"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/flash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.380392, 0.435294, 0.345098, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_size = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.313726, 0.65098, 0.00784314, 1 )

[sub_resource type="Theme" id=8]
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/styles/bg = SubResource( 6 )
ProgressBar/styles/fg = SubResource( 7 )

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0.589844, 0.589844, 0.589844, 1, 0.515625, 0.515625, 0.515625, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.917969, 0.0860596, 0.0860596, 1, 0.976563, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 7 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 0.372549, 0.933333, 0.32549, 1, 0.398621, 1, 0.347656, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[node name="Slime" type="KinematicBody2D"]
z_index = 10
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 32, 51 )
texture = ExtResource( 1 )
offset = Vector2( -32, -51 )
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Bounce"
anims/Bounce = SubResource( 3 )
anims/Hit = SubResource( 5 )
anims/RESET = SubResource( 4 )

[node name="HealthBarBG2" type="TextureProgress" parent="."]
margin_left = -10.0
margin_top = -6.0
margin_right = 2038.0
margin_bottom = -3.0
rect_scale = Vector2( 0.01, 1 )
rect_clip_content = true
value = 100.0
texture_progress = SubResource( 11 )

[node name="HealthBarBG" type="TextureProgress" parent="."]
margin_left = -10.0
margin_top = -6.0
margin_right = 2038.0
margin_bottom = -3.0
rect_scale = Vector2( 0.01, 1 )
rect_clip_content = true
value = 100.0
texture_progress = SubResource( 6 )

[node name="HealthBarFG" type="TextureProgress" parent="."]
margin_left = -10.0
margin_top = -6.0
margin_right = 2038.0
margin_bottom = -3.0
rect_scale = Vector2( 0.01, 1 )
rect_clip_content = true
value = 100.0
texture_progress = SubResource( 9 )

[node name="TXTDamage" type="RichTextLabel" parent="."]
visible = false
margin_left = -4.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 2.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
bbcode_text = "20"
tab_size = 1
text = "20"
fit_content_height = true
scroll_active = false

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -23.0
margin_top = -21.0
margin_right = 23.0
margin_bottom = -7.0
theme = SubResource( 8 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
